--- a/starter/package.json
+++ b/starter/package.json
@@ -4,6 +4,7 @@
   "description": "learning node-js",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/WseanKiu/nodejs-farm#readme",
   "dependencies": {
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
